--- a/animu.html
+++ b/animu.html
@@ -8,6 +8,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="bottle3d" href="BOTTLE CODE 3.glb">
 </head>
 <body>
   <!-- HEADER -->
@@ -173,6 +174,105 @@
       <p class="copyright">© <span id="year"></span> ANIMU ESSENCE</p>
     </div>
   </footer>
+<!-- === ANIMU 3D BOTTLE VIEWER === -->
+<script type="module">
+import * as THREE from "https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.module.js";
+import { GLTFLoader } from "https://cdn.jsdelivr.net/npm/three@0.155.0/examples/jsm/loaders/GLTFLoader.js";
+
+let scene, camera, renderer, bottle;
+
+// === Scene Setup ===
+scene = new THREE.Scene();
+scene.background = new THREE.Color(0xf5f7f8); // soft neutral background
+
+// === Camera ===
+camera = new THREE.PerspectiveCamera(45, window.innerWidth / 500, 0.1, 100);
+camera.position.set(0, 1.2, 3);
+
+// === Renderer ===
+renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
+renderer.setSize(window.innerWidth, 500);
+renderer.setPixelRatio(window.devicePixelRatio);
+document.getElementById("bottle-container").appendChild(renderer.domElement);
+
+// === Lighting ===
+const ambient = new THREE.AmbientLight(0xffffff, 2.0);
+scene.add(ambient);
+
+const dirLight = new THREE.DirectionalLight(0xffffff, 3);
+dirLight.position.set(5, 10, 5);
+scene.add(dirLight);
+
+// === Load the 3D Bottle ===
+const loader = new GLTFLoader();
+loader.load(
+  "BOTTLE CODE 3.glb", // <-- using your working model
+  (gltf) => {
+    bottle = gltf.scene;
+
+    // Scale + position tweaks
+    bottle.scale.set(3, 3, 3);
+    bottle.position.set(0, -1, 0);
+    bottle.rotation.y = Math.PI;
+
+    scene.add(bottle);
+
+    // Auto center camera on object
+    const box = new THREE.Box3().setFromObject(bottle);
+    const center = box.getCenter(new THREE.Vector3());
+    const size = box.getSize(new THREE.Vector3());
+    const maxDim = Math.max(size.x, size.y, size.z);
+    const fov = camera.fov * (Math.PI / 180);
+    let cameraZ = Math.abs(maxDim / 2 / Math.tan(fov / 2));
+    cameraZ *= 1.5;
+    camera.position.set(0, center.y, cameraZ);
+    camera.lookAt(center);
+
+    console.log("✅ ANIMU bottle loaded successfully");
+  },
+  undefined,
+  (error) => {
+    console.error("❌ Error loading ANIMU bottle:", error);
+  }
+);
+
+// === Mouse Drag Rotation ===
+let isDragging = false;
+let prevX = 0;
+
+renderer.domElement.addEventListener("mousedown", (e) => {
+  isDragging = true;
+  prevX = e.clientX;
+});
+
+renderer.domElement.addEventListener("mouseup", () => (isDragging = false));
+
+renderer.domElement.addEventListener("mousemove", (e) => {
+  if (isDragging && bottle) {
+    const delta = e.clientX - prevX;
+    bottle.rotation.y += delta * 0.01;
+    prevX = e.clientX;
+  }
+});
+
+// === Resize Responsiveness ===
+window.addEventListener("resize", () => {
+  const container = document.getElementById("bottle-container");
+  camera.aspect = container.clientWidth / container.clientHeight;
+  camera.updateProjectionMatrix();
+  renderer.setSize(container.clientWidth, container.clientHeight);
+});
+
+// === Animation Loop ===
+function animate() {
+  requestAnimationFrame(animate);
+  if (bottle && !isDragging) {
+    bottle.rotation.y += 0.003; // Slow auto-rotate
+  }
+  renderer.render(scene, camera);
+}
+animate();
+</script>
 
 <!-- 3D BOTTLE VIEWER -->
 <section class="section bottle-viewer-section">
@@ -182,11 +282,11 @@
     <div id="bottle-container"></div>
   </div>
 </section>
-
+<script type="module" src="Bottle.js"></script>
 <!-- Load Three.js and GLTFLoader -->
-<script src="Three.js"></script>
+<script src="BOTTLE CODE 3.glb"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.157.0/examples/js/loaders/GLTFLoader.js"></script>
-<script src="Three.js"></script>
+<script src="Bottle.js"></script>
 <div id="bottle-container" style="width:100%; height:500px;"></div>
 
   <script>
